# rnafold

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: build_install.yaml  publish_mkdocs.yml  test.yaml
config/: config_local.yml  data_kaggle.yml  metrics_kaggle.yml  metrics_local.yml  rhofold_local.yml
data/: sample_submission.csv  test_sequences-small.csv  train_labels.csv  train_sequences.csv  validation_labels-small.csv  validation_labels.csv  validation_sequences.csv
docs/: index.md
examples/: demo-rhofold-plus.ipynb  eda.ipynb  rhofold.ipynb
rnafold/: baseconfig.py  config.py  config.yml  dataset.py  main.py  metrics.py  pdb.py  plots.py  report.py  submit.py
rnafold/rhofold/: distogram.py  main.py  submit.py
search/: search_index.json
tests/: test_baseconfig.py  test_main.py  test_submit.py
